--- a/android/app/src/main/res/navigation/pleo_navigation.xml
+++ b/android/app/src/main/res/navigation/pleo_navigation.xml
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/pleo_navigation">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/pleo_navigation"
+    app:startDestination="@id/listExpensesFragment">
+
+    <fragment
+        android:id="@+id/listExpensesFragment"
+        android:name="com.pleoexpenseschallenge.ui.fragments.ListExpenses"
+        android:label="List Expenses"
+        tools:layout="@layout/fragment_list_expenses"/>
+
 
 </navigation>
