--- a/android/app/src/main/res/layout/activity_expenses.xml
+++ b/android/app/src/main/res/layout/activity_expenses.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.ExpensesActivity">
+    tools:context=".ui.ExpensesActivity"
+    android:background="@color/white">
 
     <fragment
         android:id="@+id/nav_host_fragment"
