--- a/android/app/src/main/res/layout/fragment_list_expenses.xml
+++ b/android/app/src/main/res/layout/fragment_list_expenses.xml
@@ -6,10 +6,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.fragments.ListExpenses">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="HOLA MUNDO"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/listExpensesRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:listitem="@layout/expense_view"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
