--- a/android/app/src/main/res/layout/fragment_list_expenses.xml
+++ b/android/app/src/main/res/layout/fragment_list_expenses.xml
@@ -16,6 +16,79 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/listExpensesFiltersGroup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="gone">
+
+        <LinearLayout
+            android:id="@+id/listExpensesSortByAmount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/frame_rounded_dark"
+            android:orientation="horizontal"
+            android:padding="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/money_symbol" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:layout_marginEnd="8dp"
+                android:fontFamily="@font/roboto_regular"
+                android:textColor="@color/white"
+                android:textSize="14sp"
+                tools:text="Sort by amount"
+                android:text="@string/filter_sort_by_amount_text"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/listExpensesSortByMerchant"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/frame_rounded_dark"
+            android:orientation="horizontal"
+            android:padding="8dp"
+            app:layout_constraintEnd_toEndOf="@+id/listExpensesSortByAmount"
+            app:layout_constraintStart_toStartOf="@+id/listExpensesSortByAmount"
+            app:layout_constraintTop_toBottomOf="@id/listExpensesSortByAmount">
+
+            <ImageView
+                android:layout_marginStart="4dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/sort_alphabet" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:fontFamily="@font/roboto_regular"
+                android:textColor="@color/white"
+                android:textSize="14sp"
+                tools:text="Sort by A-Z"
+                android:text="@string/filter_sort_by_alphabet_text"/>
+
+        </LinearLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <ProgressBar
         android:id="@+id/listExpensesProgressBar"
         android:layout_width="40dp"
@@ -25,6 +98,27 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_alignParentBottom="true"
         android:visibility="gone"/>
+
+    <TextView
+        android:id="@+id/listExpensesFiltersButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="32dp"
+        android:background="@drawable/frame_rounded"
+        android:fontFamily="@font/roboto_regular"
+        android:paddingStart="16dp"
+        android:paddingTop="8dp"
+        android:paddingEnd="16dp"
+        android:paddingBottom="8dp"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:text="FILTERS"
+        android:visibility="gone"
+        android:text="@string/filter_text_button"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
